[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.13", features = ["compat"] }
ansi_term = "0.12.1"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
colored = "2.0.4"
spinners = "4.1.0"
futures = "0.3.28"
async-trait = "0.1.73"

# 数据库驱动依赖
mysql = "24.0.0"
redis = "0.23.0"
postgres = "0.19.5"
mongodb = "2.6.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
memcache = "0.17.0"
oracle = "0.5.7"
tiberius = "0.12.2"
tokio = { version = "1.29.1", features = ["full"] }
